--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <title>Qi's Portfolio</title>
+  <title>Qi's Portfolio | Home Page</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
+  <header>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="project.html">Projects</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li style="float:right"><a class="active" href="gallery.html">Gallery</a></li>
+    </ul>
+  </header>
   <section class="top">
     <div class="intro-bg"></div>
     <div class="container_2">
