Update the pattern and layout; Need mobile version

--- a/gallery.html
+++ b/gallery.html
@@ -25,22 +25,22 @@
 
   <div class="gallery cf">
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-1.jpg" />
     </div>
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-2.jpg" />
     </div>
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-3.jpg" />
     </div>
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-4.jpg" />
     </div>
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-5.jpg" />
     </div>
     <div>
-      <img src="http://abload.de/img/a6aawu.jpg" />
+      <img src="img/gallery/gallery-6.jpg" />
     </div>
   </div>
 
