--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="project.html">Projects</a></li>
+<!--       <li><a href="project.html">Projects</a></li> -->
       <li><a href="resume.html">Resume</a></li>
       <li style="float:right"><a class="active" href="gallery.html">Gallery</a></li>
     </ul>
@@ -20,11 +20,11 @@
   <section class="top">
     <div class="intro-bg"></div>
     <div class="container_2">
-        <header class="intro">
+        <div class="intro">
             <img src="img/avatar.png" alt="" class="avatar">
             <h1>Hi, I'm Qi!</h1>
             <h2>Now I'm a big fun for: Front end, Node.js, React (studying right now).</h2>
-        </header>
+        </div>
         <div class="social-network">
             <section class="social">
                 <h3><i class="wrap"></i> SOCIAL NETWORK <i class="wrap"></i></h3>
