--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li style="float:right"><a class="active" href="gallery.html">Gallery</a></li>
     </ul>
   </header>
-  <section class="top">
+  <div class="top">
     <div class="intro-bg"></div>
     <div class="container_2">
         <div class="intro">
@@ -26,18 +26,18 @@
             <h2>Now I'm a big fun for: Front end, Node.js, React (studying right now).</h2>
         </div>
         <div class="social-network">
-            <section class="social">
+            <div class="social">
                 <h3><i class="wrap"></i> SOCIAL NETWORK <i class="wrap"></i></h3>
                 <ul class="clearfix">
                     <li><a href="https://github.com/QiZhang79?tab=repositories"><i class="lisicon lisicon-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/qizhang-uma/"><i class="lisicon lisicon-linkedin"></i></a></li>
                     <li><a href="mailto://zhangqitydx@gmail.com"><i class="lisicon lisicon-email"></i></a></li>
                 </ul>
-            </section>
+            </div>
         </div>
 
     </div>
-  </section>
+  </div>
   <article>
     <div class="parallax">
       <div class="bg-1">
@@ -46,9 +46,9 @@
       <div class="bg-2">
       </div>
     </div>
-    <header>
+    <div class="parallax-header">
       <h1>This is Me. <a href="https://www.facebook.com/zhangqitydx">@QiZhang</a></h1>
-    </header>
+    </div>
     <section>
       <div class="container">
         <p> Hi, my name is Qi Zhang. I'm a currently a  graduate student majored in 
